<resources>
    <string name="app_name">Smart Watch</string>



    <string name="startStop">Start/Stop</string>
    <string name="resetLap">Reset/Lap</string>
    <string name="minutes">00</string>
    <string name="seconds">00</string>
    <string name="colon">:</string>

    <!-- model state display names -->
    <string name="STOPPED">Stopped</string>
    <string name="RUNNING">Running</string>
    <string name="LAP_RUNNING">Lap/Running</string>
    <string name="LAP_STOPPED">Lap/Stopped</string>
</resources>
