<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<LinearLayout-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:id="@+id/stopwatch_fragment"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->

    <!--<TextView-->
        <!--android:id="@+id/stopwatch_time"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="@dimen/normal_margin"-->
        <!--android:background="?attr/selectableItemBackground"-->
        <!--android:gravity="center_horizontal"-->
        <!--android:padding="@dimen/small_margin"-->
        <!--android:textSize="@dimen/stopwatch_text_size"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--tools:text="00.00"/>-->

    <!--<LinearLayout-->
        <!--android:id="@+id/stopwatch_sorting_indicators_holder"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:visibility="invisible"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/stopwatch_time">-->

        <!--<ImageView-->
            <!--android:id="@+id/stopwatch_sorting_indicator_1"-->
            <!--android:layout_width="@dimen/lap_time_size"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:visibility="invisible"-->
            <!--app:layout_constraintEnd_toStartOf="@+id/stopwatch_sorting_indicator_2"-->
            <!--app:layout_constraintHorizontal_chainStyle="packed"-->
            <!--app:layout_constraintStart_toStartOf="parent"/>-->

        <!--<ImageView-->
            <!--android:id="@+id/stopwatch_sorting_indicator_2"-->
            <!--android:layout_width="@dimen/lap_time_size"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:visibility="invisible"-->
            <!--app:layout_constraintEnd_toStartOf="@+id/stopwatch_sorting_indicator_3"-->
            <!--app:layout_constraintStart_toEndOf="@+id/stopwatch_sorting_indicator_1"-->
            <!--app:layout_constraintTop_toTopOf="parent"/>-->

        <!--<ImageView-->
            <!--android:id="@+id/stopwatch_sorting_indicator_3"-->
            <!--android:layout_width="@dimen/lap_time_size"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:visibility="invisible"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toEndOf="@+id/stopwatch_sorting_indicator_2"-->
            <!--app:layout_constraintTop_toTopOf="parent"/>-->

    <!--</LinearLayout>-->

    <!--<com.simplemobiletools.commons.views.MyRecyclerView-->
        <!--android:id="@+id/stopwatch_list"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_marginBottom="@dimen/activity_margin"-->
        <!--android:clipToPadding="false"-->
        <!--android:overScrollMode="ifContentScrolls"-->
        <!--android:scrollbars="vertical"-->
        <!--app:layoutManager="com.simplemobiletools.commons.views.MyLinearLayoutManager"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/stopwatch_play_pause"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/stopwatch_sorting_indicators_holder"/>-->

    <!--<ImageView-->
        <!--android:id="@+id/stopwatch_play_pause"-->
        <!--android:layout_width="@dimen/stopwatch_button_size"-->
        <!--android:layout_height="@dimen/stopwatch_button_size"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginBottom="@dimen/big_margin"-->
        <!--android:padding="@dimen/normal_margin"-->
        <!--android:src="@drawable/ic_play"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.5"-->
        <!--app:layout_constraintStart_toStartOf="parent"/>-->

    <!--<ImageView-->
        <!--android:id="@+id/stopwatch_reset"-->
        <!--android:layout_width="@dimen/stopwatch_button_small_size"-->
        <!--android:layout_height="@dimen/stopwatch_button_small_size"-->
        <!--android:layout_toLeftOf="@+id/stopwatch_play_pause"-->
        <!--android:background="?attr/selectableItemBackgroundBorderless"-->
        <!--android:padding="@dimen/normal_margin"-->
        <!--android:src="@drawable/ic_reset"-->
        <!--android:visibility="gone"-->
        <!--app:layout_constraintBottom_toBottomOf="@+id/stopwatch_play_pause"-->
        <!--app:layout_constraintEnd_toStartOf="@+id/stopwatch_play_pause"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="@+id/stopwatch_play_pause"/>-->

    <!--<TextView-->
        <!--android:id="@+id/stopwatch_lap"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="@dimen/stopwatch_button_small_size"-->
        <!--android:background="?attr/selectableItemBackgroundBorderless"-->
        <!--android:gravity="center"-->
        <!--android:letterSpacing="0.1"-->
        <!--android:paddingLeft="@dimen/activity_margin"-->
        <!--android:paddingRight="@dimen/activity_margin"-->
        <!--android:text="@string/lap"-->
        <!--android:textAllCaps="true"-->
        <!--android:textSize="25dp"-->
        <!--android:visibility="gone"-->
        <!--app:layout_constraintBottom_toBottomOf="@+id/stopwatch_play_pause"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toEndOf="@+id/stopwatch_play_pause"-->
        <!--app:layout_constraintTop_toTopOf="@+id/stopwatch_play_pause"/>-->

<!--</LinearLayout>-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp" >

    <RelativeLayout
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/stateName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp" />
    </RelativeLayout>

    <!--
         TODO Why can't I define textSize and textStyle
    	 in the timer container and have it inherited
    	 by the TextViews?
    -->

    <RelativeLayout
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutes"
            android:textSize="80sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/colon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/minutes"
            android:text="@string/colon"
            android:textSize="80sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/colon"
            android:text="@string/seconds"
            android:textSize="80sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timer"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/startStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onStartStop"
            android:text="@string/startStop" />

        <Button
            android:id="@+id/resetLap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/startStop"
            android:onClick="onLapReset"
            android:text="@string/resetLap" />
    </RelativeLayout>

</RelativeLayout>